--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    font-family: "Inter" , sans-serif;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Inter', sans-serif;
+padding: 0;
+margin: 0;
+box-sizing: border-box;
+list-style: none;
+text-decoration: none;
+font-family: "Inter" , sans-serif;
 }
 
 :root{
-    --main_color : #ff8716;
-    --p_color : #7b7b7b;
-    --bs_color : #f3f3f3
+--main_color : #ff8716;
+--p_color : #7b7b7b;
+--bg_color: #F3F3F3;
+--white_color: #fff;
+--color_heading: #121416;
+--border_color : #e5e5e5d5;
+--Sale_color: #E51A1A;
 }
 
 span{
@@ -27,124 +27,139 @@ p{
     color: var(--p_color);
 }
 
+img{
+    width: 100%;
+}
+
+h1, h2, h3, h4, h5, h6{
+    color: var(--color_heading);
+    font-family: "Dm sans" , sans-serif;
+}
+
+.container{
+    width: 90%;
+    margin: auto;
+    max-width: 1350px;
+}
+
+@media (max-width: 1350px){
+    .container{
+        width: 90%;
+    }
+}
+
 header{
-    display: flex;
-    background-color: #fff;
+    background: #fff;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    height: 55px;
 }
 
-.logo img{
-    width: 180px;
-    height: auto;
-    padding-top: 10px;
+header .top_header .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 0;
+}
+
+header .top_header .logo{
+    width: 100px;
     transition: transform 0.3s ease;
+}
+
+input,select,button{
+    border: none;
+    outline: none;
 }
 
 .logo img:hover{
     transform: scale(1.1);
 }
 
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px 0;
-    width: 90%;
-    margin: 0 auto;
-    max-width: 1350px;
-}
 
-@media (max-width:1350px){
-    .container{
-        width: 90%;
-    }
-}
-
-.search_box{
+header .top_header .search_box{
     width: 610px;
     display: flex;
-    align-content: center;
+    align-items: center;
     border-radius: 2px;
-    padding-top: 10px;
-    padding-left: 90px;
-    background-color: var(--bs_color);
+    background: var(--bg_color);
 }
 
-.search_box input{
+header .top_header .search_box input{
     height: 55px;
-    background-color: white ;
-    padding: 5px 15px 5px 10px;
     width: 400px;
-    font-size: 16px;
-    background-color: var(--bs_color);
-    outline: none;
-    border: none;
+    padding: 5px 15px 5px 10px;
+    background: var(--bg_color);
 }
 
-#category{
+header .top_header .search_box .select_box{
     position: relative;
 }
 
-.search_box select{
+header .top_header .search_box .select_box::after{
+    content: '';
+    top: 50%;
+    transform: translateY(50%);
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1px;
+    height: 50%;
+    background: #b9b9b9;
+}
+
+header .top_header .search_box select{
     height: 55px;
     width: 190px;
-    outline: none;
-    border: none;
-    background-color: var(--bs_color);
+    background: var(--bg_color);
     font-size: 16px;
     cursor: pointer;
     padding-left: 10px;
     margin-right: 10px;
 }
 
-.search_box select option{
+header .top_header .search_box select option{
     font-size: 15px;
 }
 
-.container .search_box button{
+header .top_header .search_box button{
     height: 55px;
     width: 60px;
-    padding: 5px;
-    background-color: var(--main_color);
-    font-size: 18px;
+    background: var(--main_color);
+    font-size: 15px;
     cursor: pointer;
 }
 
-.container .search_box button i{
-    color: white;
+header .top_header .search_box button i{
+    color: var(--white_color);
 }
 
-.container .header_icon{
+header .top_header .header_icons{
     display: flex;
     gap: 30px;
 }
 
-.container .header_icon a{
+header .top_header .header_icons .icon{
     position: relative;
     cursor: pointer;
 }
 
-.container .header_icon a i{
+header .top_header .header_icons .icon i{
     font-size: 24px;
+    color: silver;
 }
 
-.cart_count{
-    width: 20px;
-
-    margin-left: 20px ;
-    margin-top: -15px;
-    background-color: var(--main_color);
-    font-size: 11px;
-    line-height: 20px;
-    text-align: center;
-    color: white;
+header .top_header .header_icons .icon .count{
     position: absolute;
-
-}
-
-#cart_shopping{
-    color: black;
+    top: -10px;
+    right: -10px;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 20px;
+    background: var(--main_color);
+    color: var(--white_color);
+    font-size: 11px;
+    border-radius: 100%;
 }
