--- a/style.css
+++ b/style.css
@@ -22,10 +22,13 @@ font-family: "Inter" , sans-serif;
 }
 
 /* General Styles */
-body {
+html, body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    width: 100%;
+    max-width: 100%;
     background-color: #f8f8f8;
     text-align: center;
 }
@@ -242,7 +245,7 @@ header .bottom_header .nav_links li.start a{
     scale: 1.1;
 }
 
-.banners_4{
+/* .banners_4{
     margin-top: 150px;
     margin-bottom: 30px;
 }
@@ -298,9 +301,10 @@ header .bottom_header .nav_links li.start a{
     width: 100%;
     height: 100%;
     background: transparent;
-}
+} */
 
 .products {
+    margin-top: 150px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
@@ -371,20 +375,22 @@ header .bottom_header .nav_links li.start a{
 .footer {
     background: var(--top_header);
     color: #fff;
-    padding: 20px 0; 
-    margin-right: calc(-50vw + 50%);
-    margin-left: calc(-50vw + 50%);
+    padding: 40px 0 20px; 
+    direction: rtl;
+    max-width: 100vw;
+    box-sizing: border-box;
     position: relative;
     right: 0;
     left: 0;
     width: 100vw;
 }
 .footer-container {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
     flex-wrap: wrap;
     width: 100%;
-    padding: 20px 5%;
+    padding: 0px 15px;
     box-sizing: border-box;
     max-width: 1200px;
     margin: 0 auto;
@@ -423,7 +429,12 @@ header .bottom_header .nav_links li.start a{
     margin: 5px;
 }
 .footer-bottom {
-    margin-top: 20px;
+    text-align: center;
+    margin-top: 30px;
+    padding-top: 20px;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    width: 100%;
+    box-sizing: border-box;
     font-size: 14px;
 }
 
@@ -673,12 +684,25 @@ color: var(--color_heading);
 }
 
 @media screen and (max-width: 1200px) {
+
+    .banners_4 .container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
     .products.banners_4 {
         grid-template-columns: repeat(3, 1fr);
     }
+
+    .footer {
+        width: 100vw;
+        max-width: 100vw;
+        left: 0;
+        right: 0;
+    }
+
 }
 
-@media screen and (max-width : 900px){
+@media screen and (max-width : 768px){
 
     body{
         padding-top: 240px;
@@ -757,16 +781,24 @@ color: var(--color_heading);
         width: calc(33.33% - 20px);
     }
 
+    .banners_4.container {
+        grid-template-columns: 1fr;
+    }
+
     .products.banners_4 {
         grid-template-columns: repeat(2, 1fr);
     }
 
     .footer{
-        width: 100%;
+        width: 100vw;
+        max-width: 100vw;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     .footer-container {
         flex-direction: column;
+        grid-template-columns: 1fr;
         align-items: center;
         width: 100%;
     }
@@ -779,15 +811,46 @@ color: var(--color_heading);
 
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 576px) {
     .swiper-slide.product {
-        width: calc(50% - 20px);
+        width: calc(50% - 20 px);
     }
 
-    .footer .footer-container{
-        width: 100%;
+    .footer {
+        width: 100vw;
+        max-width: 100vw;
+        margin: 0;
+        padding: 30px 0 15px;
+    }
+    
+    .footer-container {
+        padding: 0 10px;
     }
 
+}
+
+@media screen and (max-width: 430px) {
+
+    .products{
+        margin-left: 15%;
+    }
+
+    .products.banners_4 {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+
+}
+
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.footer{
+    margin-top: auto;
 }
 
 /* end responsive */
@@ -797,87 +860,171 @@ color: var(--color_heading);
 
 .fake-element{
     width: 100%;
-    height: 25vh;
+    height: 20vh;
 }
 
-#productDetails{
-    width: 90%;
-    height: 90px;
-    margin-bottom: 500px;
+/* Base styles for the product details section */
+.section-p1 {
+    padding: 40px 80px;
+}
+
+#productDetails {
     display: flex;
     margin-top: 20px;
-
 }
 
-#productDetails .single-pro-image{
-    width: 50%;
-    height: 40%;
+.single-pro-image {
+    width: 30%;
     margin-right: 50px;
 }
 
-#productDetails .single-pro-image img{
-    width: 40%;
-    border-radius: 5px;
+.single-pro-image img {
+    width: 100%;
+    border-radius: 4px;
 }
 
-#productDetails .single-pro-details{
+.single-pro-details {
     width: 50%;
     padding-top: 30px;
 }
 
-#productDetails .single-pro-details h4{
-    padding: 40px 0 20px 0;
-}
-
-#productDetails .single-pro-details h2{
-    font-size: 26px;
-}
-
-#productDetails .single-pro-details select{
-    display: block;
-    padding: 5px 10px;
-    margin-bottom: 10px;
-}
-
-#productDetails .single-pro-details input{
-    width: 50px;
-    height: 47px;
-    padding-left: 10px;
+.single-pro-details h5 {
     font-size: 16px;
-    margin-right: 10px;
-    margin-left: -400px;
-    border: 2px solid black;
-    border-radius: 5px;
-    padding: 5px;
+    color: #333;
+    margin-bottom: 5px;
 }
 
-#productDetails .single-pro-details input:focus{
+.single-pro-details h4 {
+    font-size: 22px;
+    margin-bottom: 15px;
+}
+
+.single-pro-details h2 {
+    font-size: 26px;
+    margin-bottom: 20px;
+    color: var(--main_color);
+}
+
+.single-pro-details select {
+    display: block;
+    padding: 8px 15px;
+    margin-bottom: 15px;
+    border: 1px solid #e1e1e1;
+    border-radius: 4px;
     outline: none;
+    width: 250px;
 }
 
-#productDetails .single-pro-details button{
-    background: var(--main_color);
-    width: 150px;
+.single-pro-details input {
+    width: 60px;
     height: 40px;
-    border: 0.5 solid ;
-    color: #fff;
+    padding-left: 10px;
+    margin-right: 10px;
+    border: 1px solid #e1e1e1;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.single-pro-details button {
+    background-color: var(--main_color);
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    font-weight: 600;
     cursor: pointer;
+    transition: all 0.3s ease;
 }
 
-#productDetails .single-pro-details button:hover{
-    transition: 0.3s;
+.single-pro-details button:hover {
+    background-color: #fff;
+    color: var(--main_color);
+    border: 1px solid var(--main_color);
 }
 
-#productDetails .single-pro-details h4{
-    margin-left: -250px;
-    font-size: large;
+.single-pro-details span {
+    display: block;
+    line-height: 1.6;
+    margin-top: 10px;
 }
 
-#productDetails .single-pro-details span{
-    margin-left: -550px;
-    line-height: 25px;
-    color: #121416;
+
+
+/* start responsive of product datails */
+
+@media screen and (max-width: 992px) {
+
+    .fake-element{
+        width: 100%;
+        height: 0;
+    }
+    .section-p1 {
+        padding: 40px;
+    }
+    
+    .single-pro-image {
+        width: 45%;
+        margin-right: 30px;
+    }
+    
+    .single-pro-details {
+        width: 50%;
+    }
+    
+    .single-pro-details select {
+        width: 200px;
+    }
 }
+
+/* Media query for smaller tablets */
+@media screen and (max-width: 768px) {
+    .section-p1 {
+        padding: 30px;
+    }
+    
+    #productDetails {
+        flex-direction: column;
+    }
+    
+    .single-pro-image {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
+    
+    .single-pro-details {
+        width: 100%;
+        padding-top: 0;
+    }
+}
+
+/* Media query for mobile phones */
+@media screen and (max-width: 480px) {
+    .section-p1 {
+        padding: 20px;
+    }
+    
+    .single-pro-details h4 {
+        font-size: 18px;
+    }
+    
+    .single-pro-details h2 {
+        font-size: 22px;
+    }
+    
+    .single-pro-details select {
+        width: 100%;
+        max-width: 250px;
+    }
+    
+    .single-pro-details button {
+        margin-top: 10px;
+    }
+}
+
+
+/* end responsive of product datails */
+
 
 /* end product page */
 
